examples/test/testpolicy5981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5981
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key17: value10
      key19: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value4
          key42: value34
      podSelector:
        matchLabels:
          key3: value30
